# tucano

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  annotated.js  blurrednormalmap_8hpp.html  blurrednormalmap_8hpp_source.html  bufferobject_8hpp.html  bufferobject_8hpp_source.html  camera_8hpp.html  camera_8hpp.js  camera_8hpp_source.html  camerapath_8hpp.html  camerapath_8hpp_source.html  classComputeShaderTest-members.html  classComputeShaderTest.html  classComputeShaderTest.js  classEffects_1_1BlurredNormalMap-members.html  classEffects_1_1BlurredNormalMap.html  classEffects_1_1BlurredNormalMap.js  classEffects_1_1GradientFilter-members.html  classEffects_1_1GradientFilter.html  classEffects_1_1GradientFilter.js  classEffects_1_1MeanFilter-members.html  classEffects_1_1MeanFilter.html  classEffects_1_1MeanFilter.js  classEffects_1_1NormalMap-members.html  classEffects_1_1NormalMap.html  classEffects_1_1NormalMap.js  classEffects_1_1Phong-members.html  classEffects_1_1Phong.html  classEffects_1_1Phong.js  classEffects_1_1RenderTexture-members.html  classEffects_1_1RenderTexture.html  classEffects_1_1RenderTexture.js  classEffects_1_1SSAO-members.html  classEffects_1_1SSAO.html  classEffects_1_1SSAO.js  classEffects_1_1Toon-members.html  (+255 more)
_maintainers/: PKGBUILD  setup-webdoc.sh  webdoc-setup.sh
doc/: CMakeLists.txt  effectTutorial.md  effects.md  examples.md  framebufferTutorial.md  meshTutorial.md  textureTutorial.md  welcome.md
effects/: blurrednormalmap.hpp  computeShaderTest.cpp  computeShaderTest.hpp  directcolor.hpp  gradientfilter.hpp  meanfilter.hpp  normalmap.hpp  normalvector.hpp  phongshader.hpp  picking.hpp  rendertexture.hpp  ssao.hpp  toon.cpp  toon.hpp
effects/shaders/: blur.frag  blur.vert  deferredShader.frag  deferredShader.vert  gaussianblurfilter.frag  gaussianblurfilter.vert  normalmapping.frag  normalmapping.vert  normalvector.frag  normalvector.geom  normalvector.vert  parallaxmapping.frag  parallaxmapping.vert  phongshader.frag  phongshader.vert  rendertexture.frag  simpleTess.frag  simpleTess.geom  simpleTess.tesc  simpleTess.tese  simpleTess.vert  ssao.frag  ssao.vert  ssaoShader.frag  ssaoShader.vert  ssaofinal.frag  terrain.frag  terrain.geom  terrain.tesc  terrain.tese  terrain.vert  toonShader.frag  toonShader.vert  toonshader.frag  toonshader.vert  viewspacebuffer.frag
samples/: CMakeLists.txt
samples/flyscene/: CMakeLists.txt  flyscene.cpp  flyscene.hpp  main.cpp
samples/glfw/: CMakeLists.txt
samples/glfw/flyscene/: CMakeLists.txt  flyscene.cpp  flyscene.hpp  main.cpp
samples/glfw/helloglfw/: CMakeLists.txt  helloglfw.cpp
samples/glut/: CMakeLists.txt
samples/glut-simpleTexture/: CMakeLists.txt  main.cpp
samples/glut/glutCommon/: GlutApp.h  GlutWindow.h
samples/glut/normalVector/: CMakeLists.txt  normalVectorMain.cpp  normalVectorWindow.cpp  normalVectorWindow.h
samples/glut/simpleTexture/: CMakeLists.txt  GlutWindow.cpp  GlutWindow.h  main.cpp  simpleTextureMain.cpp  simpleTextureWindow.cpp  simpleTextureWindow.h
samples/imgproc/: CMakeLists.txt  glwidget.cpp  glwidget.hpp  imgproc.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
samples/models/: toy.ply
samples/phongViewer/: CMakeLists.txt  glwidget.cpp  glwidget.hpp  mainwindow.cpp  mainwindow.ui  phongViewer.pro
samples/qt5/: CMakeLists.txt
samples/qt5-simpleTexture/: CMakeLists.txt  GLWidget.cpp  GLWidget.h  main.cpp  qt5-simpleTexture.qrc
samples/qt5/normalMapping/: CMakeLists.txt  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.ui  normalMapping.qrc  normalmapping.hpp
samples/qt5/parallaxMapping/: CMakeLists.txt  bumpmesh.hpp  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parallaxMapping.qrc  parallaxmapping.hpp  tbn.h
samples/qt5/phongViewer/: CMakeLists.txt  glwidget.cpp  glwidget.h
samples/qt5/rendering/: CMakeLists.txt  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.ui
samples/qt5/simpleFbo/: CMakeLists.txt  glwidget.cpp  glwidget.h  mainwindow.ui
samples/qt5/simpleTesselation/: CMakeLists.txt  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.ui
samples/qt5/simpleTexture/: CMakeLists.txt  GLWidget.cpp  GLWidget.h  main.cpp  qt5-simpleTexture.qrc
samples/qt5/terrainTesselation/: CMakeLists.txt  TerrainMesh.hpp  glwidget.cpp  glwidget.h  mainwindow.ui  terrainTesselation.qrc
samples/rendering/: CMakeLists.txt  glwidget.cpp  glwidget.hpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rendering.pro
samples/simpleTexture/: CMakeLists.txt  glwidget.cpp  glwidget.hpp  mainwindow.cpp  mainwindow.ui  simpleTexture.pro
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  defines_0.js  defines_1.js  (+73 more)
src/: bufferobject.hpp  camera.hpp  effect.hpp  framebuffer.hpp  mesh.hpp  model.hpp  shader.hpp  texture.hpp  texturemanager.hpp  trackball.hpp  tucano.hpp
src/shapes/: arrow.hpp  camerarep.hpp  cone.hpp  coordinateaxes.hpp  cylinder.hpp  icosahedron.hpp  sphere.hpp
src/utils/: camerapath.hpp  camerarep.hpp  flycamera.hpp  frustum.hpp  misc.hpp  objimporter.hpp  path.hpp  plyimporter.hpp  qtflycamerawidget.hpp  qtplainwidget.hpp  qttrackballwidget.hpp  rply.hpp  trackball.hpp
